--- a/src/Components/HomePageComponents/about/about.css
+++ b/src/Components/HomePageComponents/about/about.css
@@ -9,7 +9,7 @@
 
 .aboutTitleContainer h2 {
     color: var(--light-font-color);
-    font-size: clamp(1rem, 4.25vw, 6vw);
+    font-size: clamp(2rem, 4.25vw, 6vw);
     text-align: center;
 }
 
@@ -25,7 +25,7 @@
 
 .ownerTitleContainer h3 {
     color: var(--light-font-color);
-    font-size: clamp(1rem, 2.5rem, 6vw);
+    font-size: clamp(.85rem, 2.5rem, 6vw);
     margin-bottom: 1rem;
 }
 
@@ -33,7 +33,37 @@
     color: var(--light-font-color);
     font-family: "Poppins";
     margin-bottom: 1rem;
-    font-size: clamp(.85rem, 1.10rem, 6vw);
-    /* font-weight: 900; */
+    font-size: clamp(.85rem, 1.10rem, 4vw);
     text-align: justify;
+}
+
+
+/* =============== MEDIA QUERIES (MEDIUM DEVICES) =============== */
+@media screen and (max-width: 1024px) {}
+
+/* =============== MEDIA QUERIES (SMALL DEVICES) =============== */
+@media screen and (max-width: 600px) {
+    .aboutSection {
+        padding-bottom: 2rem;
+    }
+
+    .aboutSectionContainer {
+        margin-top: 12rem;
+    }
+
+    .ownerSection {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .ownerSectionColumn {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        overflow-y: scroll;
+        padding-bottom: 2rem;
+        height: 45vh;
+
+    }
 }
