--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ code {
   --primary-bg-color: #2D2D2D;
   --light-font-color: #FFFFFF;
   --dark-font-color: #000000;
+  --highlighter-color: #fef100;
 
 
   --container-width-lg: 85%;
