--- a/src/Components/HomePageComponents/hero/hero.css
+++ b/src/Components/HomePageComponents/hero/hero.css
@@ -8,35 +8,22 @@
     overflow-x: hidden;
     width: 100vw; */
     /* filter: brightness(.20); */
-
+    /* background-color: rgba(81, 18, 0, 0.945); */
     /* background-color: rgba(90, 21, 2, 0.5);
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center; */
 
-    min-height: 100vh;
+    /* min-height: 100vh;
     overflow: hidden;
     position: relative;
-    width: 100%;
+    width: 100%; */
     /* background-image: radial-gradient(#842d0768, #e8690085), url('/Users/paulblack/VS Code/RareFinds/rarefinds/src/Assets/rareFinds.png'); */
 
 }
 
-.parallaxDiscoverImage {
-    border: 2px solid green;
-    filter: brightness(50%);
-    position: absolute;
 
-}
 
-/* .custom-bg {
-    height: 100%;
-    width: 100vw;
-    border: 2px solid red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 #heroSection {
     width: 100%;
@@ -52,11 +39,17 @@
 
 }
 
+.titleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .titleContainer h1 {
     color: var(--light-font-color);
     font-size: clamp(4rem, 12.5vw, 14.5vw);
-    margin-bottom: -4rem;
+    text-align: center;
     text-shadow: var(--primary-text-shadow);
 
 }
@@ -65,8 +58,11 @@
     color: var(--light-font-color);
     font-size: clamp(1rem, 4.25vw, 6vw);
     font-weight: 200;
-    letter-spacing: 4.30rem;
     text-shadow: var(--primary-text-shadow);
+    letter-spacing: clamp(.90rem, 4.25rem, 6.25vw);
+    text-align: center;
+    margin-right: -5rem;
+    margin-top: -3rem;
 
 }
 
@@ -77,11 +73,8 @@
 
 .paragraphContainer p {
     color: var(--light-font-color);
-    font-size: clamp(.75rem, 2vw, 6vw);
+    font-size: clamp(1rem, 2vw, 6vw);
     text-shadow: var(--primary-text-shadow);
-
-
-
 
 }
 
@@ -89,14 +82,11 @@
     animation: spin_words 15s ease infinite;
     color: var(--light-font-color);
     display: block;
-    font-size: clamp(.75rem, 2vw, 6vw);
+    font-size: clamp(1rem, 2vw, 6vw);
     height: 3rem;
     padding-right: 10px;
     text-align: right;
     text-shadow: var(--primary-text-shadow);
-
-
-
 
 }
 
@@ -160,4 +150,15 @@
 @media screen and (max-width: 1024px) {}
 
 /* =============== MEDIA QUERIES (SMALL DEVICES) =============== */
-@media screen and (max-width: 600px) {}
+@media screen and (max-width: 600px) {
+
+    .titleContainer {
+        margin-top: -4em;
+    }
+
+    .titleContainer h2 {
+        margin-right: -1rem;
+        margin-top: -1rem;
+
+    }
+}
