--- a/src/Components/NavFooterComponents/logo/logo.css
+++ b/src/Components/NavFooterComponents/logo/logo.css
@@ -7,7 +7,8 @@
 .logoTop {
     color: var(--light-font-color);
     cursor: pointer;
-    font-size: 2.5rem;
+    font-size: clamp(1rem, 3rem, 8vw);
+    /* font-size: 3rem; */
     margin-bottom: -.75rem;
 
 
@@ -16,9 +17,19 @@
 .logoBottom {
     color: var(--light-font-color);
     cursor: pointer;
-    font-size: 1.15rem;
-    letter-spacing: .75rem;
+    font-size: clamp(.85rem, 1.15rem, 4vw);
+    letter-spacing: clamp(.16rem, .98rem, 2.25vw);
     font-weight: 100;
 
 
+}
+
+/* =============== MEDIA QUERIES (MEDIUM DEVICES) =============== */
+@media screen and (max-width: 1024px) {}
+
+/* =============== MEDIA QUERIES (SMALL DEVICES) =============== */
+@media screen and (max-width: 600px) {
+    .logoBottom {
+        margin-top: .25rem;
+    }
 }
