--- a/src/Components/HomePageComponents/contact/contactForm/contactForm.css
+++ b/src/Components/HomePageComponents/contact/contactForm/contactForm.css
@@ -22,8 +22,9 @@ input,
 textarea {
     background: transparent;
     border: 2px solid var(--light-font-color);
-    color: var(--light-font-color);
     border-radius: 12px;
+    color: var(--light-font-color);
+    font-size: 1rem;
     padding: 1.5rem;
     position: relative;
     resize: none;
