--- a/src/Components/HomePageComponents/hero/hero.css
+++ b/src/Components/HomePageComponents/hero/hero.css
@@ -25,6 +25,7 @@
 
 
 
+
 #heroSection {
     width: 100%;
     height: 100vh;
@@ -44,105 +45,130 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.titleContainer h1 {
-    color: var(--light-font-color);
-    font-size: clamp(4rem, 12.5vw, 14.5vw);
-    text-align: center;
-    text-shadow: var(--primary-text-shadow);
+    height: 20rem;
 
 }
 
-.titleContainer h2 {
-    color: var(--light-font-color);
-    font-size: clamp(1rem, 4.25vw, 6vw);
-    font-weight: 200;
-    text-shadow: var(--primary-text-shadow);
-    letter-spacing: clamp(.90rem, 4.25rem, 6.25vw);
-    text-align: center;
-    margin-right: -5rem;
-    margin-top: -3rem;
 
-}
-
-.paragraphContainer {
-    display: flex;
-    height: 3rem;
-}
-
-.paragraphContainer p {
-    color: var(--light-font-color);
-    font-size: clamp(1rem, 2vw, 6vw);
-    text-shadow: var(--primary-text-shadow);
-
-}
-
-.paragraphContainer .words span {
-    animation: spin_words 15s ease infinite;
+.titleContainer .words span {
+    animation: spin_words 45s ease infinite;
     color: var(--light-font-color);
     display: block;
-    font-size: clamp(1rem, 2vw, 6vw);
-    height: 3rem;
-    padding-right: 10px;
-    text-align: right;
+    font-size: clamp(3.75rem, 12.5vw, 14.5vw);
+    text-align: center;
     text-shadow: var(--primary-text-shadow);
+    height: 15rem;
 
 }
 
 .words {
     overflow: hidden;
+}
+
+
+.titleContainer h2 {
+
+    color: var(--light-font-color);
+    font-size: clamp(1.25rem, 4rem, 6vw);
+    font-weight: 400;
+    text-shadow: var(--primary-text-shadow);
+    text-align: center;
 
 }
+
+
+
+
 
 
 @keyframes spin_words {
 
-    0% {
+    /* 0% {
         transform: translateY(0%)
-    }
+    } */
 
-    10% {
+    5% {
         transform: translateY(-100%)
     }
 
-    20% {
+    10% {
         transform: translateY(-200%)
     }
 
-    30% {
+    15% {
         transform: translateY(-300%)
     }
 
-    40% {
+    20% {
         transform: translateY(-400%)
     }
 
-    50% {
+    25% {
         transform: translateY(-500%)
     }
 
-    60% {
+    30% {
         transform: translateY(-600%)
     }
 
-    70% {
+    35% {
         transform: translateY(-700%)
     }
 
-    80% {
+    40% {
         transform: translateY(-800%)
     }
 
-    90% {
+    45% {
         transform: translateY(-900%)
     }
 
-    100% {
+    50% {
         transform: translateY(-1000%)
     }
-}
 
+    55% {
+        transform: translateY(-1100%)
+    }
+
+    60% {
+        transform: translateY(-1200%)
+    }
+
+    65% {
+        transform: translateY(-1300%)
+    }
+
+    70% {
+        transform: translateY(-1400%)
+    }
+
+    75% {
+        transform: translateY(-1500%)
+    }
+
+    80% {
+        transform: translateY(-1600%)
+    }
+
+    85% {
+        transform: translateY(-1700%)
+    }
+
+    90% {
+        transform: translateY(-1800%)
+    }
+
+    95% {
+        transform: translateY(-1900%)
+    }
+
+    100% {
+        transform: translateY(-2000%)
+    }
+
+
+}
 
 
 
@@ -153,12 +179,12 @@
 @media screen and (max-width: 600px) {
 
     .titleContainer {
-        margin-top: -4em;
+        margin-top: -8em;
+        height: 7.50rem;
     }
 
-    .titleContainer h2 {
-        margin-right: -1rem;
-        margin-top: -1rem;
+    .titleContainer .words span {
 
+        height: 8rem;
     }
 }
