--- a/src/Components/NavFooterComponents/navigation/navigation.css
+++ b/src/Components/NavFooterComponents/navigation/navigation.css
@@ -30,18 +30,19 @@ header {
 .navigationContainer ul h3::after {
     content: '';
     position: absolute;
-    top: 35px;
+    top: 1.80rem;
     width: 0%;
     height: 2px;
     left: 50%;
-    background: yellow;
+    background: var(--highlighter-color);
     transform: translateX(-50%);
     transition: .3s
 }
 
 .navigationContainer ul h3:hover {
-    color: yellow;
+    color: var(--highlighter-color);
 }
+
 
 .navigationContainer ul h3:hover::after {
     width: 90%;
@@ -123,8 +124,7 @@ header {
     }
 
     .navigationContainer ul h3::after {
-
-        top: 24px;
+        top: 1.80rem;
 
     }
 }
