--- a/src/Components/HomePageComponents/validation/validation.css
+++ b/src/Components/HomePageComponents/validation/validation.css
@@ -46,9 +46,16 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+
 
     box-shadow: var(--primary-box-shadow);
+
+}
+
+.reviewBox h3 {
+    text-align: center;
+    font-size: clamp(.95rem, 1.25rem, 6vw);
 
 }
 
