--- a/src/Components/NavFooterComponents/navigation/navigation.css
+++ b/src/Components/NavFooterComponents/navigation/navigation.css
@@ -9,6 +9,7 @@ header {
     align-items: center;
     display: flex;
     justify-content: space-between;
+
 }
 
 
@@ -56,9 +57,13 @@ header {
 .hamburgerMenu {
     cursor: pointer;
     display: None;
+    opacity: 0;
+
+    visibility: hidden;
+    justify-content: flex-end;
+
+
 }
-
-
 
 .bar {
     background-color: white;
@@ -67,7 +72,7 @@ header {
     margin: 5px auto;
     transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
-    width: 2rem;
+    width: 2.5rem;
 
 
 
@@ -79,19 +84,22 @@ header {
 /* =============== MEDIA QUERIES (SMALL DEVICES) =============== */
 @media screen and (max-width: 600px) {
     .hamburgerMenu {
+
         display: block;
+        opacity: 1;
+        visibility: visible;
         z-index: 600;
     }
 
-    .navBarMenu {
 
+    .navBarMenu {
+        align-items: center;
         background: var(--primary-bg-color);
         display: flex;
         height: 75vh;
-        inset: 10% 0 0 0;
+        inset: 16% 0 0 0;
         flex-direction: column;
-        align-items: center;
-
+        opacity: 1;
         position: fixed;
         padding: min(15vh, 10rem) 2rem;
         transform: translateY(-120%);
@@ -99,8 +107,10 @@ header {
         z-index: 500;
         min-width: 100vw;
 
-
+        visibility: visible;
     }
+
+
 
     .navbarMenu[data-visible="true"] {
         transform: translateX(0%)
