--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 } */
 
 body {
+  background-color: var(--primary-bg-color);
   margin: 0;
   font-family: "Abril Fatface", serif;
   font-weight: 400;
