--- a/src/Components/HomePageComponents/about/about.css
+++ b/src/Components/HomePageComponents/about/about.css
@@ -10,7 +10,7 @@
 
 .aboutTitleContainer h2 {
     color: var(--light-font-color);
-    font-size: clamp(2rem, 4.25vw, 6vw);
+    font-size: clamp(2.75rem, 4.25vw, 6vw);
     text-align: center;
 }
 
@@ -26,7 +26,7 @@
 
 .ownerTitleContainer h3 {
     color: var(--light-font-color);
-    font-size: clamp(.85rem, 2.5rem, 6vw);
+    font-size: clamp(.85rem, 2.5rem, 4vw);
     margin-bottom: 1rem;
 }
 
@@ -40,7 +40,15 @@
 
 
 /* =============== MEDIA QUERIES (MEDIUM DEVICES) =============== */
-@media screen and (max-width: 1024px) {}
+@media screen and (max-width: 1024px) {
+
+    .ownerSectionColumn {
+        overflow-y: scroll;
+        padding-bottom: 2rem;
+        height: 80vh;
+
+    }
+}
 
 /* =============== MEDIA QUERIES (SMALL DEVICES) =============== */
 @media screen and (max-width: 600px) {
