--- a/src/Components/HomePageComponents/contact/contactForm/contactForm.css
+++ b/src/Components/HomePageComponents/contact/contactForm/contactForm.css
@@ -6,6 +6,20 @@
 
 }
 
+.contactFormSection fieldset {
+    align-items: center;
+    border: transparent;
+    color: var(--primary-bg-color);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 60vw;
+}
+
+.contactFormSection fieldset legend {
+    color: var(--primary-bg-color)
+}
+
 
 form {
     align-items: center;
@@ -126,7 +140,7 @@ textarea::placeholder {
 
     input,
     textarea {
-        width: 100%;
+        width: 90vw;
 
     }
 
