--- a/src/Components/HomePageComponents/validation/validation.css
+++ b/src/Components/HomePageComponents/validation/validation.css
@@ -12,25 +12,37 @@
 
 }
 
-/* .validationContainer[data-animated="true"] {
-    overflow: hidden;
-    -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 95%, transparent);
-    mask: linear-gradient(90deg, transparent, white 20%, white 95%, transparent);
-} */
+.scroller {
+    max-width: 100%;
+}
 
-.reviewListUl {
-    animation: reviewScroll linear infinite;
+
+.scroller__inner {
+    padding-block: 2rem;
     display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+
+}
+
+
+
+.scroller[data-animated="true"] {
+    overflow: hidden;
+    -webkit-mask: linear-gradient(90deg, transparent, black 10%, black 90%, transparent);
+    mask: linear-gradient(90deg, transparent, black 10%, black 90%, transparent);
+}
+
+.scroller[data-animated="true"] .scroller__inner {
     flex-wrap: nowrap;
-    gap: 3rem;
-    padding-block: 1rem;
     width: max-content;
-
+    animation: scroll var(--_animation-duration, 50s) var(--_animation-direction, forwards) linear infinite;
 }
 
-.reviewListUl:hover {
-    animation-play-state: paused;
+.scroller[data-speed="slow"] .scroller__inner {
+    --_animation-duration: 50s
 }
+
 
 
 .reviewBox {
@@ -40,7 +52,7 @@
     font-family: 'Poppins';
     font-size: clamp(.75rem, .85rem, 6vw);
     height: clamp(11rem, 13rem, 40vw);
-    width: clamp(22rem, 25rem, 40vw);
+    width: clamp(20rem, 23rem, 40vw);
 
     padding: .75rem 1.5rem;
 
@@ -76,8 +88,8 @@
     ;
 }
 
-@keyframes reviewScroll {
+@keyframes scroll {
     to {
-        transform: translate(-100%)
+        transform: translate(calc(-50% - 0.5rem))
     }
 }
